// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  box-sizing: border-box;
  display: inline;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-color: #fcfcfd;
  font-size: 0.875em;
  border-radius: 4px;
  padding: 0.25em 0.5em;
  border-style: solid;
  border-color: #d9d9e1;
  border-width: 1px 1px 2px;
}

.emotion-2 {
  color: #574feb !important;
}

<kbd
  class="emotion-0 emotion-1 emotion-2 test fp-Box fp-Key"
>
  Space
</kbd>
`;

exports[`overrides css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  box-sizing: border-box;
  display: inline;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-color: #fcfcfd;
  font-size: 0.875em;
  border-radius: 4px;
  padding: 0.25em 0.5em;
  border-style: solid;
  border-color: #d9d9e1;
  border-width: 1px 1px 2px;
}

.emotion-0 {
  background-color: red;
}

<kbd
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Key"
>
  Space
</kbd>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  box-sizing: border-box;
  display: inline;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-color: #fcfcfd;
  font-size: 0.875em;
  border-radius: 4px;
  padding: 0.25em 0.5em;
  border-style: solid;
  border-color: #d9d9e1;
  border-width: 1px 1px 2px;
}

<kbd
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Key"
>
  Space
</kbd>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  box-sizing: border-box;
  display: inline;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-color: #fcfcfd;
  font-size: 0.875em;
  border-radius: 4px;
  padding: 0.25em 0.5em;
  border-style: solid;
  border-color: #d9d9e1;
  border-width: 1px 1px 2px;
}

.emotion-2 {
  color: #574feb !important;
}

<kbd
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Key"
>
  Space
</kbd>
`;

exports[`theming css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  box-sizing: border-box;
  display: inline;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-color: #fcfcfd;
  font-size: 0.875em;
  border-radius: 4px;
  padding: 0.25em 0.5em;
  border-style: solid;
  border-color: #d9d9e1;
  border-width: 1px 1px 2px;
}

.emotion-0 {
  background-color: red;
}

<kbd
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Key"
>
  Space
</kbd>
`;

exports[`variants css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  box-sizing: border-box;
  display: inline;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-color: #fcfcfd;
  font-size: 0.875em;
  border-radius: 4px;
  padding: 0.25em 0.5em;
  border-style: solid;
  border-color: #d9d9e1;
  border-width: 1px 1px 2px;
}

.emotion-0 {
  background-color: red;
}

<kbd
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Key"
>
  Space
</kbd>
`;
